[BE] Delete User Feature
