# server/Startup/openapi.json
@@ -325,6 +325,38 @@
           }
         }
       }
+    },
+    "/api/User/delete": {
+      "delete": {
+        "tags": [
+          "User"
+        ],
+        "operationId": "User_DeleteUser",
+        "requestBody": {
+          "x-name": "request",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/DeleteUserDto"
+              }
+            }
+          },
+          "required": true,
+          "x-position": 1
+        },
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/User"
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -483,6 +515,301 @@
           },
           "message": {
             "type": "string"
+          }
+        }
+      },
+      "User": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "hash": {
+            "type": "string"
+          },
+          "salt": {
+            "type": "string"
+          },
+          "userId": {
+            "type": "string",
+            "format": "guid"
+          },
+          "firstName": {
+            "type": "string"
+          },
+          "lastName": {
+            "type": "string"
+          },
+          "email": {
+            "type": "string"
+          },
+          "birthday": {
+            "type": "string",
+            "format": "date-time",
+            "nullable": true
+          },
+          "country": {
+            "type": "string"
+          },
+          "role": {
+            "type": "string"
+          },
+          "weather": {
+            "$ref": "#/components/schemas/Weather"
+          },
+          "userSettings": {
+            "$ref": "#/components/schemas/UserSettings"
+          },
+          "userPlants": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/UserPlant"
+            }
+          },
+          "alerts": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/Alert"
+            }
+          },
+          "userDevices": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/UserDevice"
+            }
+          }
+        }
+      },
+      "Weather": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "userId": {
+            "type": "string",
+            "format": "guid"
+          },
+          "city": {
+            "type": "string"
+          },
+          "country": {
+            "type": "string"
+          },
+          "user": {
+            "$ref": "#/components/schemas/User"
+          }
+        }
+      },
+      "UserSettings": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "userId": {
+            "type": "string",
+            "format": "guid"
+          },
+          "celsius": {
+            "type": "boolean"
+          },
+          "darkTheme": {
+            "type": "boolean"
+          },
+          "confirmDialog": {
+            "type": "boolean"
+          },
+          "secretMode": {
+            "type": "boolean"
+          },
+          "waitTime": {
+            "type": "string"
+          },
+          "user": {
+            "$ref": "#/components/schemas/User"
+          }
+        }
+      },
+      "UserPlant": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "userID": {
+            "type": "string",
+            "format": "guid"
+          },
+          "plantID": {
+            "type": "string",
+            "format": "guid"
+          },
+          "user": {
+            "$ref": "#/components/schemas/User"
+          },
+          "plant": {
+            "$ref": "#/components/schemas/Plant"
+          }
+        }
+      },
+      "Plant": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "plantID": {
+            "type": "string",
+            "format": "guid"
+          },
+          "planted": {
+            "type": "string",
+            "format": "date-time",
+            "nullable": true
+          },
+          "plantName": {
+            "type": "string"
+          },
+          "plantType": {
+            "type": "string"
+          },
+          "plantNotes": {
+            "type": "string"
+          },
+          "lastWatered": {
+            "type": "string",
+            "format": "date-time",
+            "nullable": true
+          },
+          "waterEvery": {
+            "type": "integer",
+            "format": "int32",
+            "nullable": true
+          },
+          "isDead": {
+            "type": "boolean"
+          },
+          "userPlants": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/UserPlant"
+            }
+          },
+          "alerts": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/Alert"
+            }
+          }
+        }
+      },
+      "Alert": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "alertID": {
+            "type": "string",
+            "format": "guid"
+          },
+          "alertUserId": {
+            "type": "string",
+            "format": "guid"
+          },
+          "alertName": {
+            "type": "string"
+          },
+          "alertDesc": {
+            "type": "string"
+          },
+          "alertTime": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "alertPlant": {
+            "type": "string",
+            "format": "guid",
+            "nullable": true
+          },
+          "user": {
+            "$ref": "#/components/schemas/User"
+          },
+          "plant": {
+            "$ref": "#/components/schemas/Plant"
+          }
+        }
+      },
+      "UserDevice": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "deviceId": {
+            "type": "string",
+            "format": "guid"
+          },
+          "userId": {
+            "type": "string",
+            "format": "guid"
+          },
+          "deviceName": {
+            "type": "string"
+          },
+          "deviceDescription": {
+            "type": "string"
+          },
+          "createdAt": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "user": {
+            "$ref": "#/components/schemas/User"
+          },
+          "sensorHistories": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/SensorHistory"
+            }
+          }
+        }
+      },
+      "SensorHistory": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "sensorHistoryId": {
+            "type": "string",
+            "format": "guid"
+          },
+          "deviceId": {
+            "type": "string",
+            "format": "guid"
+          },
+          "temperature": {
+            "type": "number",
+            "format": "double"
+          },
+          "humidity": {
+            "type": "number",
+            "format": "double"
+          },
+          "airPressure": {
+            "type": "number",
+            "format": "double"
+          },
+          "airQuality": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "time": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "userDevice": {
+            "$ref": "#/components/schemas/UserDevice"
+          }
+        }
+      },
+      "DeleteUserDto": {
+        "type": "object",
+        "additionalProperties": false,
+        "required": [
+          "email"
+        ],
+        "properties": {
+          "email": {
+            "type": "string",
+            "format": "email",
+            "minLength": 1
           }
         }
       },
